	- Removed Beta tag from 'Allow Personal Transformer in non-armor Grids' setting.
    - Added ability to enable/disable the ability to use the shortcuts in most scenarios.
  Bugfix:
    - Fixed several crashes introduced in 0.1.18 despite the fact I swear I tested those scenarios
	- Fixed case where when a train was cloned it would leave duplicates of the invisible transformers lying around.
  Note:
    - Biggest performance hits are on having a large amount of other gear in your grid. If you can think of a way to improve this, please let me know.
	
---------------------------------------------------------------------------------------------------
Version: 0.1.18
  Optimizations:
    - Refactored for performance. Got about a 30% improvement in my SE factory I was testing on.
  Features:
    - Personal Transformers now work in vehicle grids!
    - This includes trains.
    - Leaving the setting as is since vehicles can have a significant performance hit and it really needs more stress testing. (Beta)
  Note:
    - Biggest performance hits are on having a large amount of other gear in your grid. If you can think of a way to improve this, please let me know.

---------------------------------------------------------------------------------------------------
Version: 0.1.17
  Features:
    - Added 'Set Tick Delay' setting for allowing control of how often the code runs updates.
  Current Bugs:
    - Vehicles do not drain energy properly. Vehicles can power the network but no drain from batteries currently occurs.
    - Transformers do NOT work if you put them in after other equipment in vehicle grids. No idea why. 
    - Despite these bugs I've released this so that people could at least attempt to use the functionality. If you've got a fix, please let me know!

---------------------------------------------------------------------------------------------------
Version: 0.1.16
  Bugfix: 
    - Fixed issue of not properly deleting entities on surface change.