@@ -364,7 +364,7 @@ function update_personal_transformer(tickdelay, transformer_data)
 				if grid ~= nil then
 				-- perform math
 					for _, v in pairs(grid.equipment) do
-						if not is_personal_transformer_name_match(v.name) and v.prototype.energy_source ~= nil then
+						if v.prototype.energy_source ~= nil then
 							-- if energy source calculate max_draw_in/out from equipment with flow limit
 							-- ie, what's the flow rate of the generators/batteries
 							-- toggle off appropriate draw if toggle is off
@@ -424,7 +424,8 @@ function update_personal_transformer(tickdelay, transformer_data)
 						if gt_entity.type == 'electric-energy-interface' then
 							gt_entity.energy = gt_entity.energy * (1 - drain_in)
 						else
-							gt_entity.energy = buffer - ((buffer - gt_entity.energy) * (1 - drain_out))
+							local entity_buffer = gt_entity.electric_buffer_size
+							gt_entity.energy = entity_buffer - ((entity_buffer - gt_entity.energy) * (1 - drain_out))
 						end
 					end
 					----
@@ -522,7 +523,8 @@ function update_vehicle_transformer(tickdelay, transformer_data)
 						if gt_entity.type == 'electric-energy-interface' then
 							gt_entity.energy = gt_entity.energy * (1 - drain_in)
 						else
-							gt_entity.energy = buffer - ((buffer - gt_entity.energy) * (1 - drain_out))
+							local entity_buffer = gt_entity.electric_buffer_size
+							gt_entity.energy = entity_buffer - ((entity_buffer - gt_entity.energy) * (1 - drain_out))
 						end
 					end
 					----
